Refactored readme.md and added commentary in js. Also corrected bag with discount block showing on mobile version.

--- a/styles/index.css
+++ b/styles/index.css
@@ -348,7 +348,7 @@
 }
 
 .cart .cartMain p {
-    min-width: 90px;
+    min-width: 120px;
 }
 
 .cart .cartMain p::before {
